<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.garmentRegistry.GarmentRegistryFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Imagen superior -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/garment_form_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rounded_button_light" />

            <Button
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:layout_marginVertical="10dp"
                />
        </LinearLayout>

        <!-- Campo Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre de la prenda"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_light"/>

        <!-- Campo Tag -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Etiqueta (Opcional)"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTag"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/gray_medium"
            android:hint="@string/garment_tag_input_hint"
            android:background="@drawable/rounded_button_light"
            />

        <!-- Campo Category -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garment_category_input_lbl"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_light"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint_light">
        </Spinner>

        <!-- Campo Color -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garment_color_input_txt"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_light"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint_light"/>

        <!-- Switch Print -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/garment_has_print_switch" />

        <!-- Botón Register -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="100dp"
            android:background="@drawable/rounded_button"
            android:text="@string/garment_add_garment_btn"/>

    </LinearLayout>

</ScrollView>